--- a/Ecommerce/style.css
+++ b/Ecommerce/style.css
@@ -129,3 +129,305 @@ p{
     color: #088178;
     padding: 14px 65px 14px 65px;
 }
+#features{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#features .f-box{
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba (0,0,0,0.3);
+    border: 1px solid #cce7d0;
+    margin: 15px 0;
+    transition: box-shadow 0.3s;
+}
+#features .f-box:hover{
+    box-shadow: 10px 10px 54px rgba(0,0,0,0.1);
+
+}
+#features .f-box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#features .f-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    font-size: 14px;
+    color:#088178;
+    background-color: #fddde4;
+}
+.product-section .pro-collection{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 , 60px;
+}
+
+.product-section .product-cart{
+    width:300px;
+    border:1px solid #ebebeb;
+    padding: 13px;
+    margin-bottom: 30px;
+    border-radius: 35px;
+    position: relative;
+    box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
+    transition: box-shadow 0.02s;
+}
+.product-section .product-cart img{
+    width: 100%;
+    border-radius: 25px;
+}
+
+.product-section .product-cart:hover{
+    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
+}
+
+.product-section .product-cart span{
+    color: #969696;
+    font-weight: 500;
+    line-height: 30px;
+}
+
+.product-section .product-cart h4{
+    font-size: 18px;
+    color:rgb(41, 41, 41);
+}
+
+.product-section .product-cart .stars{
+    color: #e6ae2c;
+    padding: 6px 0;
+}
+.product-section .product-cart .price{
+    color: #088178;
+    padding:4px 0;
+}
+
+.product-section .product-cart .buy-icon{
+    color: #088178;
+    background-color: #c7e9e75e;
+    padding: 15px;
+    position: absolute;
+    border-radius: 50px;
+    right: 10px;
+    bottom: 10px;
+}
+
+#off-banner{
+    background-image: url(images/banner/b2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+#off-banner h4{
+    color:#eaebf0
+}
+
+#off-banner h2{
+    color:#eaebf0;
+    padding: 20px 0;
+}
+button.normal{
+    font-size: 14px;
+    font-weight: 600px;
+    padding: 15px 30px;
+    color: #000;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    background-color: #fff;
+    transition: 0.02s;
+}
+
+#off-banner {
+    background-image: url(images/banner/b2.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  #off-banner h4 {
+    color: #eaebf0;
+  }
+  #off-banner h2 {
+    color: #eaebf0;
+    padding: 20px 0;
+  }
+  
+  /* new arrival section styles 
+    this section gets the same styles 
+    in featured products section
+  */
+  
+  /* banners section styles */
+  
+  #banners {
+    margin: 0 60px;
+  }
+  #banners h2,
+  h4,
+  span {
+    color: rgb(248, 248, 248);
+  }
+  #banners .big-banners {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #banners .big-banners div {
+    min-width: 580px;
+    margin: 15px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 25px;
+    background-size: cover;
+    backdrop-filter: blur(8%);
+  }
+  #banners .big-banners button {
+    margin-top: 20px;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: transparent;
+    color: rgb(248, 248, 248);
+    border: 1px solid rgb(248, 248, 248);
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
+  #banners .big-banners div:hover button {
+    background-color: #088178;
+    border: 1px solid #088178;
+  }
+  #banners .big-banners-1 {
+    background-image: url(images/banner/b17.jpg);
+  }
+  #banners .big-banners-2 {
+    background-image: url(images/banner/b10.jpg);
+  }
+  #banners .small-banners-1 {
+    background-image: url(images/banner/b7.jpg);
+  }
+  #banners .small-banners-2 {
+    background-image: url(images/banner/b4.jpg);
+  }
+  #banners .small-banners-3 {
+    background-image: url(images/banner/b18.jpg);
+  }
+  #banners .small-banners {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #banners .small-banners div {
+    min-width: 370px;
+    height: 200px;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 25px;
+    background-size: cover;
+  }
+  #banners .small-banners h2 {
+    font-size: 25px;
+  }
+  #banners .small-banners h5 {
+    color: #771818;
+  }
+  
+  /* newsletter section styles */
+  
+  #newsletter {
+    background-image: url(images/banner/b14.png);
+    background-repeat: no-repeat;
+    background-position: 180px;
+    background-color: #041e42;
+    height: 160px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 75px;
+  }
+  #newsletter .newsletter-text h3 {
+    color: white;
+    font-size: 30px;
+    padding: 0 0 15px 0;
+  }
+  #newsletter .newsletter-text h5 {
+    color: rgb(151, 151, 151);
+    font-size: 17px;
+  }
+  #newsletter .newsletter-text h5 span {
+    color: rgb(216, 182, 29);
+  }
+  #newsletter .form input {
+    padding: 20px;
+    width: 350px;
+    height: 56px;
+    background-color: #d1d0d0;
+    border-radius: 6px 0 0 6px;
+    font-size: 18px;
+  
+    border: none;
+    outline: none;
+    margin-right: -4px;
+    margin-top: 1px;
+  }
+  #newsletter .form button {
+    margin-left: 0;
+    padding: 20px;
+    border: none;
+    width: 120px;
+    background-color: #088178;
+    color: white;
+    font-size: 17px;
+    border-radius: 0 6px 6px 0;
+    cursor: pointer;
+  }
+  
+  /* footer section styles */
+  
+  #footer{
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-between;
+    padding: 75px;
+    background-color: #ececec;
+  }
+  #footer div{
+  }
+  #footer p, #footer a{
+    color: rgb(109, 109, 109);
+    text-decoration: none;
+  }
+  #footer a:hover{
+    color:#088178;
+  }
+  #footer .about a{
+    display: block;
+    padding:8px 0;
+  }
+  #footer .myaccount a{
+    display: block;
+    padding:8px 0;
+  }
+  #footer .download img{
+    border: 1px solid #08817969;
+    border-radius: 7px;
+  }
